--- a/package.json
+++ b/package.json
@@ -19,11 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-particles": "^2.12.2",
-    "react-tsparticles": "^2.12.2",
-    "styled-components": "^6.1.1",
-    "tsparticles": "^3.8.1",
-    "tsparticles-engine": "^2.12.0"
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.20",
